2004-07-19  Brian Kahne  <bkahne@ibmoto.com>

	* Found a bug:  I couldn't use the "waiter" queue, as previously
	implemented, b/c when we have an alt block and are using ResChans,
	it means that we might have a situation where a single thread (the
	alt-block containing thread) might be waiting on multiple items to
	finish (all of the ResChan objects).  This doesn't work b/c the
	Queue class only allows an object to be in a single list at any
	given time- otherwise bad things can happen.  Fixed this by
	changing the _waiters member to a gc'd vector class.

2004-07-15  Brian Kahne  <bkahne@ibmoto.com>

	* Plasma should now be useable by others when installed.  I
	created "plasma", which is a wrapper program that invokes the main
	executable (plasma-comp).  This massages parameters into the
	proper order.  I also created plasma-config for printing link
	lines, etc.

	* Converted over to using libtool.  The main parser/compiler is
	now statically linked.  Installation seems to work.  I also fixed
	up the root makefile so that remaking after a change to
	configure.ac will work properly.

2004-07-14  Brian Kahne  <bkahne@ibmoto.com>

	* Added line directives to plasma output so that debugging and
	error messages work better.  To add a line directive, I created a
	new object derived from Leaf which inserts a newline before it
	prints itself, to ensure that a line directive is valid (these
	directives must occur at the beginning of a line).  The result is
	that you can put a breakpoint in the middle of a par block and
	compilation error messages refer to the .pa file, rather than the
	.ii file.

2004-07-13  Brian Kahne  <bkahne@ibmoto.com>

	* Fixed bug w/alt parsing:  We didn't handle par blocks nested
	w/in alt.  Fixed this by calling TranslateExpression on p.body and
	adding the port variable to the environment so that the VarWalker
	would find it.  The test clock3 tests this.

	* Fixed bug in clocked channels- if a data value was already