@@ -1,15 +1,16 @@
 
 CLEANFILES= *.ii
 
-PLASMA = $(top_srcdir)/parser/plasma-comp
+PLASMA = $(top_srcdir)/scripts/plasma
 
 AM_LDFLAGS = -L$(top_srcdir)/src/.libs -Wl,-R$(top_srcdir)/src/.libs \
 	-L$(top_srcdir)/qt/.libs -Wl,-R$(top_srcdir)/qt/.libs \
 	-L$(top_srcdir)/gc/.libs -Wl,-R$(top_srcdir)/gc/.libs
-LDADD =  -lplasma -lqt -lgc -ldl
+# This must be added to each C++ file's LDADD variable.
+CXX_LDADD =  -lplasma -lqt -lgc -ldl
 
 CXXLD = $(CXX)
-LINK = $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@
+LINK = $(PLASMA) -o $@
 CXXLINK = $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@
 
 DEPENDENCIES = $(top_srcdir)/src/.libs/libplasma.a
@@ -20,8 +21,8 @@ DEPENDENCIES = $(top_srcdir)/src/.libs/libplasma.a
 
 .pa.o:
 	if LD_LIBRARY_PATH=$(top_srcdir)/parser \
-	$(PLASMA) -u.pa -c -d-include$(top_srcdir)/src/plasma-interface.h -I$(top_srcdir)/src -I$(top_srcdir)/gc/include $(INCLUDES) \
-	-d"-MT $@" -d-MD -d-MP -d"-MF$(DEPDIR)/$*.Tpo" -- $(CXXFLAGS) -o $@ $< ; \
+	$(PLASMA) --devel=$(top_srcdir) $(INCLUDES) \
+	-MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo $(CXXFLAGS) -c -o $@ $< ; \
 	then mv "$(DEPDIR)/$*.Tpo" "$(DEPDIR)/$*.Po" ; \
 	else rm -f "$(DEPDIR)/$*.Tpo"; exit 1; \
 	fi
