@@ -96,6 +96,7 @@ qsort_DEPENDENCIES = $(DEPENDENCIES)
 
 chan1_SOURCES = chan1.C
 chan1_DEPENDENCIES = $(DEPENDENCIES)
+chan1_LDADD = $(CXX_LDADD)
 
 chan2_SOURCES = chan2.pa
 chan2_DEPENDENCIES = $(DEPENDENCIES)
@@ -147,6 +148,7 @@ chan17_DEPENDENCIES = $(DEPENDENCIES)
 
 spawn1_SOURCES = spawn1.C
 spawn1_DEPENDENCIES = $(DEPENDENCIES)
+spawn1_LDADD = $(CXX_LDADD)
 
 spawn2_SOURCES = spawn2.pa
 spawn2_DEPENDENCIES = $(DEPENDENCIES)
@@ -180,6 +182,7 @@ pri6_DEPENDENCIES = $(DEPENDENCIES)
 
 proc1_SOURCES = proc1.C
 proc1_DEPENDENCIES = $(DEPENDENCIES)
+proc1_LDADD = $(CXX_LDADD)
 
 proc2_SOURCES = proc2.pa
 proc2_DEPENDENCIES = $(DEPENDENCIES)
@@ -210,9 +213,11 @@ time5_DEPENDENCIES = $(DEPENDENCIES)
 
 rand1_SOURCES = rand1.C
 rand1_DEPENDENCIES = $(DEPENDENCIES)
+rand1_LDADD = $(CXX_LDADD)
 
 rand2_SOURCES = rand2.C
 rand2_DEPENDENCIES = $(DEPENDENCIES)
+rand2_LDADD = $(CXX_LDADD)
 
 clock1_SOURCES = clock1.pa
 clock1_DEPENDENCIES = $(DEPENDENCIES)
