@@ -10,8 +10,6 @@ check_PROGRAMS = \
 eav_SOURCES = eav.pa 
 eav_DEPENDENCIES = $(DEPENDENCIES)
 
-AM_CXXFLAGS = $(CXXFLAGS) -I$(top_srcdir)/src -I$(top_srcdir)/gc/include
-
 DEP_FILES=\
 	./$(DEPDIR)/eav.Po
 
